--- a/src/themes/material/extends/_ripple.scss
+++ b/src/themes/material/extends/_ripple.scss
@@ -1,20 +1,15 @@
 %igx-ripple-display {
-    display: inline-block;
     position: absolute;
-    will-change: opacity, transform;
-    width: 0;
-    height: 0;
+    display: inline-block;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     border-radius: 50% 50%;
     background: rgba(72, 72, 72, 0.5);
-    opacity: .85;
-    transform: scale(0);
     pointer-events: none;
-    overflow: inherit;
-    transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0), scale(0);
+    will-change: opacity, transform;
 }
 
 %igx-ripple-wrapper {
