--- a/demos/app/tabbar/sample.component.html
+++ b/demos/app/tabbar/sample.component.html
@@ -20,9 +20,9 @@
             <div class="tabbar-wrapper" #tabbarEl>
                 <igx-tab-bar>
                     <igx-tab-panel icon="phone">
-                        <igx-list>
+                        <igx-list [allowRightPanning]="true" [allowLeftPanning]="true">
                             <igx-list-item [isHeader]="true">History</igx-list-item>
-                            <igx-list-item igxRipple="pink" igxRippleTarget=".igx-list__item" *ngFor="let contact of contacts">
+                            <igx-list-item igxRipple="pink" igxRippleTarget=".igx-list__item" *ngFor="let contact of contacts" [options]="options">
                                 <div class="item">
                                     <igx-avatar [src]="contact.avatar" roundShape="true"></igx-avatar>
                                     <div class="person">
