--- a/src/themes/material/modules/_list.scss
+++ b/src/themes/material/modules/_list.scss
@@ -10,6 +10,9 @@
         &:active {
             @extend %igx-list-item--active;
         }
+        // &:not(:active) {
+        //     @extend %igx-list-item--inactive;
+        // }
     }
 
     @include e(empty) {
